# libelf-lfg-win32

./: LICENSE  README.md  meson.build
contrib/elftoolchain/common/: _elftc.h
contrib/elftoolchain/libelf/: _libelf_config.h  elf_strptr.c  libelf.h  libelf_convert.c
sys/sys/: cdefs.h  elf_common.h
